# MEP-3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  zadania.cpp
examples/: CMakeLists.txt
examples/camera_example/: CMakeLists.txt  main.cpp
examples/imguI_custom_scene/: main.cpp
examples/imgui_custom_scene/: CMakeLists.txt  main.cpp
examples/imgui_example/: CMakeLists.txt  main.cpp
examples/shader_example/: CMakeLists.txt  main.cpp
examples/simple_example/: CMakeLists.txt  main.cpp
examples/simple_example/shaders/: shader.frag  shader.vert
examples/volume_rendering/: CMakeLists.txt  common.hpp  main.cpp  point_canvas.cpp  point_canvas.hpp  transfer_function.cpp  transfer_function.hpp  volume_renderer.cpp  volume_renderer.hpp
examples/volume_rendering/data/: mep.conf
examples/volume_rendering/runtime_configurations/: config.json  volume_rendering.json
examples/volume_rendering/shaders/: ray_caster.frag  ray_caster.vert
include/MEP-3D/: arcball_camera.hpp  asset.hpp  asset_controller.hpp  asset_controller.inl  asset_observer.hpp  async_progress.hpp  camera.hpp  camera_base.hpp  color.hpp  common.hpp  common_names.hpp  directional_light.hpp  drawable.hpp  engine.hpp  engine_pool.hpp  executor.hpp  features.hpp  figures.hpp  file_reader_with_progress.hpp  identity.hpp  image.hpp  key_event.hpp  layer.hpp  layer_assets.hpp  layer_controller.hpp  light.hpp  light_controller.hpp  light_controller.inl  material.hpp  mep-3d.hpp  mep_features.hpp  mep_features.inl  mesh.hpp  mesh_base.hpp  model.hpp  model_controller.hpp  mouse_event.hpp  no_destructor.hpp  non_copyable.hpp  object_action.hpp  (+41 more)
include/MEP-3D/ilc/: ilc_client.hpp  ilc_connector.hpp  ilc_daemon.hpp
include/MEP-3D/platform/: platform_delegate.hpp  platform_utils.hpp
include/MEP-3D/template/: engine_data_ui_layer.hpp  layer_assets_ui_layer.hpp  layer_controller_ui_layer.hpp  scene_ui_layer.hpp  scene_ui_layer_handler_context.hpp  shaders_preset.hpp  ui_element.hpp  ui_elements.inl  ui_handlers_impl.hpp  util_common_draw.hpp
runtime_configurations/: mep.json  scene_config.json
scripts/: run_mep_msvc.bat  run_mep_unix.sh
shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  arcball_camera.cpp  asset.cpp  asset_controller.cpp  async_progress.cpp  camera.cpp  camera.hpp  camera_base.cpp  common.cpp  common.hpp  common_names.cpp  config_create_impl.cpp  default_image.cpp  directional_light.cpp  drawable.cpp  drawable.hpp  engine.cpp  engine_pool.cpp  executor.cpp  features.cpp  figures.cpp  file_reader_with_progress.cpp  glfw_time_delta.cpp  glfw_window.cpp  identity.cpp  key_event.cpp  key_event.hpp  layer.cpp  layer_assets.cpp  layer_controller.cpp  light.cpp  main.cpp  material.cpp  mep_features.cpp  mesh.cpp  mesh_base.cpp  mesh_base.hpp  model_assimp.cpp  model_controller.cpp  object_action.cpp  (+42 more)
src/ilc/: ilc_client.cpp  ilc_connector.cpp  ilc_daemon_default.cpp
src/integration/: engine_data_ui_layer_default.cpp  engine_data_ui_layer_imgui.cpp  image_default.cpp  image_stb.cpp  layer_assets_ui_layer_default.cpp  layer_assets_ui_layer_imgui.cpp  model_assimp.cpp  model_default.cpp  time_delta_glfw.cpp  user_interface_default.cpp  user_interface_imgui.cpp  util_common_draw_default.cpp  util_common_draw_imgui.cpp  window_glfw.cpp
src/integration/default/: engine_data_ui_layer_default.cpp  layer_controller_ui_layer_default.cpp  scene_ui_layer_default.cpp  user_interface_default.cpp  util_common_draw_default.cpp
src/integration/imgui/: element_factory_imgui.hpp  element_factory_imgui.inl  engine_data_ui_layer_imgui.cpp  enum_widget.hpp  imgui_addons.cpp  imgui_addons.hpp  layer_controller_ui_layer_imgui.cpp  model_factory_imgui.cpp  model_factory_imgui.hpp  parser_imgui.cpp  parser_imgui.hpp  point_light_factory_imgui.cpp  point_light_factory_imgui.hpp  scene_ui_layer_handler_context.hpp  scene_ui_layer_imgui.cpp  scene_ui_parser_imgui.cpp  scene_ui_parser_imgui.hpp  spot_light_factory_imgui.cpp  spot_light_factory_imgui.hpp  user_interface_imgui.cpp  util_common_draw_imgui.cpp
src/integration/imgui/handlers/: resource_wrap.cpp  resource_wrap.hpp  shader_editor_context.cpp  shader_editor_context.hpp  ui_handlers.cpp  volume_wrap.cpp  volume_wrap.hpp
src/platform/: platform_delegate.cpp  platform_delegate_generic.cpp  platform_delegate_macos.cpp  platform_delegate_macos.mm  platform_delegate_windows.cpp  platform_utils_generic.cpp
src/shaders/: shader.frag  shader.vert
src/template/: layer_assets_ui_layer.cpp  layer_controller_ui_layer.cpp  scene_ui_layer.cpp  shaders_preset.cpp  ui_element.cpp
version/: CMakeLists.txt  version.hpp.in
